# study-notes

./: CMakeLists.txt  autobuild.sh  const.h  main.cpp
3rdpart/: CMakeLists.txt
3rdpart/libraryTest/: CMakeLists.txt  mylibrary.cpp  mylibrary.h
3rdpart/nanomsg/: CMakeLists.txt  configure
3rdpart/nanomsg/tests/: tcp.c
3rdpart/source-code-link/: capicxx-core-runtime  capicxx-core-tools  capicxx-someip-runtime  capicxx-someip-tools  vsomeip
3rdpart/stb-image/: CHANGELOG.md  OAT.xml  stb_ds.h
Documents/android/: android.drawio
Documents/commonapi/: commonapi理解.drawio  直接与vsomeip通信.docx
Documents/display/: drm分析.drawio  todo-opengl.txt  绘制全流程.drawio
Documents/linux/: linux.drawio
Documents/vsomeip/: vsomeip分析.drawio  vsomeip理解.drawio
assemble/: assembleTest.asm
commonapi/: CMakeLists.txt  README.md
commonapi/config/: runningEvn  vsomeip-client.json  vsomeip-local.json  vsomeip-service.json
commonapi/fidl/: CAPITestA-DBus.fdepl  CAPITestA-SomeIP.fdepl  CAPITestA.fidl  CAPITestB-SomeIP.fdepl  CAPITestB.fidl  genCAPI.sh
commonapi/include/: CAPIConst.h
commonapi/src-gen/v1/commonapi/examplesA/: CAPITestA.hpp  CAPITestAProxy.hpp  CAPITestAProxyBase.hpp  CAPITestASomeIPDeployment.cpp  CAPITestASomeIPDeployment.hpp  CAPITestASomeIPProxy.cpp  CAPITestASomeIPProxy.hpp  CAPITestASomeIPStubAdapter.cpp  CAPITestASomeIPStubAdapter.hpp  CAPITestAStub.hpp  CAPITestAStubDefault.hpp  CommonTypes.hpp  CommonTypesSomeIPDeployment.cpp  CommonTypesSomeIPDeployment.hpp
commonapi/src-gen/v1/commonapi/examplesB/: CAPITestB.hpp  CAPITestBProxy.hpp  CAPITestBProxyBase.hpp  CAPITestBSomeIPDeployment.cpp  CAPITestBSomeIPDeployment.hpp  CAPITestBSomeIPProxy.cpp  CAPITestBSomeIPProxy.hpp  CAPITestBSomeIPStubAdapter.cpp  CAPITestBSomeIPStubAdapter.hpp  CAPITestBStub.hpp  CAPITestBStubDefault.hpp
commonapi/src/CAPITestAppA/: CAPITestAStubImpl.cpp  CAPITestAStubImpl.hpp  ModelA.cpp  ModelA.h  ModelB.cpp  ModelB.h  main.cpp
commonapi/src/CAPITestAppB/: CAPITestBStubImpl.cpp  CAPITestBStubImpl.hpp  ModelA.cpp  ModelA.h  ModelB.cpp  ModelB.h  main.cpp
destruct/: CMakeLists.txt  destruct.hpp  main.cpp
fastdds/: CMakeLists.txt  README.md
fastdds/idl/: UsrData.idl  genIdl.sh
fastdds/src-gen/: UsrData.cxx  UsrData.h  UsrDataPubSubTypes.cxx  UsrDataPubSubTypes.h
fastdds/src/FDDSTestAppA/: main.cpp  sender.cpp  sender.h
fastdds/src/FDDSTestAppB/: main.cpp  receiver.cpp  receiver.h
future/: future_.cpp  future_.h
gbm/: CMakeLists.txt  DisplayServer.cpp  DisplayServer.h  DisplayTest.cpp  drmTest.c  drmTest.cpp  gbmTest.cpp
log/: LogManager.cpp  LogManager.h
multicastTest/: CMakeLists.txt  multicastTest.cpp
nanomsg/: CMakeLists.txt  README.md  main.cpp  msgNodeFactory.cpp  msgNodeFactory.h
network/: CMakeLists.txt  common.h  multicast.cpp  udp_client.cpp  udp_server.cpp
ping/: ping.hpp
rValueRef/: RvalueReference.hpp
rand/: randTest.h
resource/shader/: test.fsh
shader/: MyEGLClass.cpp  MyEGLClass.h  test.fsh  test.vsh
shared_ptr/: share_ptr.cpp  share_ptr.h
shell/: test.sh
signalSlot/: SignalSlot.hpp  SignalSlotManager.hpp
stb-image-master/: BUILD.gn  README.OpenSource  README.md  name.bat  name.txt
stb-image-master/deprecated/: stretch_test.c
stb-image-master/tests/: test_ds.c
taskExecutor/: TaskExecutor.hpp  TaskManager.cpp  TaskManager.h
templates/: templatesTest.hpp
thread/: threadTest.cpp  threadTest.h
virtko/: .gitignore  Makefile  virtko.c  virtko.h
vsomeip/: CMakeLists.txt  README.md  SomeIpTestConst.h
vsomeip/CAPIPayloadTransition/: CAPIPayloadTransition.hpp
vsomeip/Client/: SomeIpTestClient.cpp  SomeIpTestClient.h  main.cpp
vsomeip/Server/: SomeIpTestServer.cpp  SomeIpTestServer.h  main.cpp
vsomeip/config/: runClient.sh  runServer.sh  vsomeip-local.json
webTest/: CMakeLists.txt
window/: MyEGLClass.cpp  MyEGLClass.h  MyWindow.cpp  MyWindow.h
